Added model for speciality and fixed other models
